--- a/LibraryManager.MVC/Views/Borrower/Create.cshtml
+++ b/LibraryManager.MVC/Views/Borrower/Create.cshtml
@@ -1,5 +1,30 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model BorrowerForm
 @{
+    ViewData["Title"] = "Create Borrower";
 }
+
+<h2>Create Borrower</h2>
+
+<form asp-action="Create" asp-controller="Borrower" method="post">
+    @Html.AntiForgeryToken()
+    <div>
+        <label asp-for="FirstName"></label>
+        <input asp-for="FirstName" />
+    </div>
+    <div>
+        <label asp-for="LastName"></label>
+        <input asp-for="LastName" />
+    </div>
+    <div>
+        <label asp-for="Email"></label>
+        <input asp-for="Email" />
+    </div>
+    <div>
+        <label asp-for="Phone"></label>
+        <input asp-for="Phone" />
+    </div>
+    <div>
+        <button type="submit">Save</button>
+        <a asp-action="Index" asp-controller="Borrower">Go Back</a>
+    </div>
+</form>
