--- a/LibraryManager.MVC/Views/Shared/_Layout.cshtml
+++ b/LibraryManager.MVC/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                             <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Borrower" asp-action="">Borrower</a>
+                            <a class="nav-link text-dark" asp-controller="Borrower" asp-action="Index">Borrower</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Media" asp-action="">Media</a>
