--- a/LibraryManager.MVC/Views/Borrower/Edit.cshtml
+++ b/LibraryManager.MVC/Views/Borrower/Edit.cshtml
@@ -5,8 +5,9 @@
 
 <h2>Edit Borrower</h2>
 
-<form asp-action="Edit" asp-controller="Borrower" method="post">
+<form asp-controller="Borrower" asp-action="Edit" method="post">
     @Html.AntiForgeryToken()
+    <input type="hidden" asp-for="BorrowerID" />
     <div>
         <label asp-for="FirstName"></label>
         <input asp-for="FirstName" />
