fix: selected borrower information not displaying on Edit page
- replaced asp-route-id with -email

--- a/LibraryManager.MVC/Views/Borrower/Index.cshtml
+++ b/LibraryManager.MVC/Views/Borrower/Index.cshtml
@@ -46,8 +46,8 @@
                     <td>@borrower.Email</td>
                     <td>@borrower.Phone</td>
                     <td>
-                        <a asp-action="Edit" asp-controller="Borrower" asp-route-id="@borrower.BorrowerID" class="btn btn-sm btn-warning">Edit</a>
-                        <a asp-action="Delete" asp-controller="Borrower" asp-route-id="@borrower.BorrowerID" class="btn btn-sm btn-danger">Delete</a>
+                        <a asp-action="Edit" asp-controller="Borrower" asp-route-email="@borrower.Email" class="btn btn-sm btn-warning">Edit</a>
+                        <a asp-action="Delete" asp-controller="Borrower" asp-route-email="@borrower.Email" class="btn btn-sm btn-danger">Delete</a>
                     </td>
                 </tr>
             }
