--- a/LibraryManager.MVC/Views/Shared/_Layout.cshtml
+++ b/LibraryManager.MVC/Views/Shared/_Layout.cshtml
@@ -48,8 +48,7 @@
             &copy; @DateTime.Today.Year Library Manager
         </div>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     <script>
