--- a/LibraryManager.MVC/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/LibraryManager.MVC/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -1,2 +1,5 @@
-﻿<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+﻿<script src="~/lib/aspnet-client-validation/dist/aspnet-validation.min.js"></script>
+<script>
+    const v = new aspValidation.ValidationService();
+    v.bootstrap();
+</script>
