chore: register using DTO model

--- a/LibraryManager.MVC/Views/_ViewImports.cshtml
+++ b/LibraryManager.MVC/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using LibraryManager.MVC
 @using LibraryManager.MVC.Models
+@using LibraryManager.Core.DTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
