refactor: remove using statement
- registered it in _ViewImports

--- a/LibraryManager.MVC/Views/Borrower/Details.cshtml
+++ b/LibraryManager.MVC/Views/Borrower/Details.cshtml
@@ -1,5 +1,4 @@
-﻿@using LibraryManager.Core.DTOs
-@model BorrowerDetailsDTO
+﻿@model BorrowerDetailsDTO
 @{
     ViewData["Title"] = "Borrower Details";
 }
