fix: specify asp-action for media search

--- a/LibraryManager.MVC/Views/Shared/_Layout.cshtml
+++ b/LibraryManager.MVC/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                             <a class="nav-link text-dark" asp-controller="Borrower" asp-action="Index">Borrower</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Media" asp-action="">Media</a>
+                            <a class="nav-link text-dark" asp-controller="Media" asp-action="Search">Media</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Checkout" asp-action="">Checkout</a>
